--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,14 @@
+/* Body */
+body {
+  background-color: beige;
+}
+
+/* Rules button */
+#rulesBtn {
+  font-size: 20px;
+  left: 10%;
+}
+
 /* The Modal */
 .modal {
   display: none;
@@ -12,11 +23,12 @@
 
 /* modal content */
 .modal-content {
-  background-color: #fefefe;
+  background-color: #fafafa;
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
+
 }
 
 /* The close button */
