--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,15 @@
 body {
   background-color: beige;
 }
+/* Game */
+.game {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
 
 /* Rules button */
 #rulesBtn {
@@ -43,3 +52,4 @@ body {
   text-decoration: none;
   cursor: pointer;
 }
+
