add font awesome icons to choices buttons to clearly represent player choices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,12 @@ body {
   left: 10%;
 }
 /* Choices buttons */
+.choices {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+}
+
 .rock {
   font-size: 40px;
   transition-duration: 0.6s;
