--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,3 +158,9 @@ button {
   font-size: 1.5rem;
 
 }
+/* Restart and Rules Button */
+.rbuttons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
