styled the screen for smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,25 +7,24 @@ body {
 button {
   cursor: pointer;
 }
+
 /* Media query for phone size (max width 320px) */
 @media only screen and (max-width: 320px) {
-  .choices button { 
-    float: none; 
-    margin:0 auto;
-   
+  .choices button {
+    float: none;
+    margin: 0 auto;
   }
+}
 
-  }
 /* Media query for tablet size (max width 768px) */
-  @media only screen and (max-width: 768px) {
-    .choices button { 
-      float: none; 
-      margin:0 auto;
-      font-size: 10px;
+@media only screen and (max-width: 768px) {
+  .choices button {
+    float: none;
+    margin: 0 auto;
+    font-size: 10px;
   }
-  }
-  /* Media query for laptop size (max width 1440px) */
-  @media only screen and (max-width: 1440px) {
+}
+
 /* Game */
 
 .game {
@@ -109,6 +108,7 @@ button {
   border-radius: 10%;
   padding: 15px;
 }
+
 .choices button {
   font-size: 40px;
 }
@@ -118,7 +118,7 @@ button {
 .score {
   display: flex;
   justify-content: space-evenly;
-  width: 30vw;
+  width: 30em;
   text-align: center;
 }
 
@@ -129,10 +129,10 @@ button {
   font-size: 1.5rem;
 
 }
+
 /* Restart and Rules Button */
 .rbuttons {
   display: flex;
   flex-wrap: wrap;
   gap: 2rem;
 }
-  }
